--- a/Proyecto.html
+++ b/Proyecto.html
@@ -34,7 +34,7 @@
 
 
 
- <h2>Imágenes</h2>
+ <h2>Imágenes 111</h2>
 
  <p>Aquí hay algunas imágenes de ejemplo:</p>
 
@@ -46,3 +46,47 @@
 
  <hr>
 
+
+<h2 id="formulario">Campos de Entrada</h2>
+  <p>Prueba llenar este formulario:</p>
+
+  <form>
+    <label for="nombre">Nombre:</label>
+    <input type="text" id="nombre" name="nombre"><br><br>
+
+    <label for="correo">Correo electrónico:</label>
+    <input type="email" id="correo" name="correo"><br><br>
+
+    <label for="contrasena">Contraseña:</label>
+    <input type="password" id="contrasena" name="contrasena"><br><br>
+
+    <label for="edad">Edad:</label>
+    <input type="number" id="edad" name="edad"><br><br>
+
+    <label for="fecha">Fecha de nacimiento:</label>
+    <input type="date" id="fecha" name="fecha"><br><br>
+
+    <p>Elige tu fruta favorita:</p>
+    <input type="radio" id="manzana" name="fruta" value="manzana">
+    <label for="manzana">Manzana</label>
+    <input type="radio" id="banana" name="fruta" value="banana">
+    <label for="banana">Banana</label>
+    <input type="radio" id="naranja" name="fruta" value="naranja">
+    <label for="naranja">Naranja</label><br><br>
+
+    <p>Selecciona tus pasatiempos:</p>
+    <input type="checkbox" id="leer" name="pasatiempo" value="leer">
+    <label for="leer">Leer</label>
+    <input type="checkbox" id="deportes" name="pasatiempo" value="deportes">
+    <label for="deportes">Deportes</label>
+    <input type="checkbox" id="musica" name="pasatiempo" value="musica">
+    <label for="musica">Música</label><br><br>
+
+    <label for="archivo">Subir un archivo:</label>
+    <input type="file" id="archivo" name="archivo"><br><br>
+
+    <button type="submit">Enviar Formulario</button>
+  </form>
+
+</body>
+</html>
