--- a/Proyecto.html
+++ b/Proyecto.html
@@ -3,6 +3,7 @@
 <head>
 
  <meta charset="UTF-8">
+ <meta name="author" content="Ysidro y Arrasco">
 
  <title>Página de Práctica HTML</title>
 
@@ -34,7 +35,7 @@
 
 
 
- <h2>Imágenes 111</h2>
+ <h2>Imágenes </h2>
 
  <p>Aquí hay algunas imágenes de ejemplo:</p>
 
